STUFF
- Jojoe Affinity - Resolves #6
- Reformat and refractor some stuff smile :)